[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-lgt"
version = "0.1.0"
description = "Utilities for lattice gauge theory basis generation, Hamiltonian construction, exact diagonalization, and dynamics."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
notebook = ["ipython", "jupyter"]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
